<resources>
    <string name="app_name">Suicide Preventive App</string>
    <string name="title_home">Beranda</string>
    <string name="title_indicator">Hasil</string>
    <string name="title_profile">Profil</string>
    <string name="title_reminder">Reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="username"><u>Nama Pengguna</u></string>
    <string name="reminder_text_card">Apa kamu sudah mengisi diary hari ini? Jika belum, isi diary-mu dengan memilih menu di bawah, yuk!</string>
    <string name="content_description">icon</string>
    <string name="diary">Diary</string>
    <string name="call_care_giver">Hubungi\nCare-giver</string>
    <string name="call_doctor">Hubungi\nDokter</string>
    <string name="call_hospital">Hubungi\nRumah Sakit</string>
    <string name="result_title">Hasil Pengisian Diary</string>
    <string name="questionnaire">Isi Kuesioner</string>
    <string name="selfie">Ambil Swafoto</string>
    <string name="voice_record">Rekam Suara</string>
    <string name="helper">Bantuan Untukmu</string>

    <string name="question_1">1. Apakah hari ini sudah teratur minum obat?</string>
    <string name="question_2">2. Bagaimana kadar stress-mu hari ini?</string>
    <string name="question_3">3. Bagaimana kadar rasa takut yang muncul hari ini?</string>
    <string name="question_4">4. Adakah gejala kekambuhan yang kamu rasakan hari ini?</string>
    <string name="question_5">5. Jika ada, apa gejala kekambuhan yang kamu rasakan hari ini?</string>
    <string name="question_6">6. Apakah Anda pernah ingin mati atau Anda ingin pergi tidur dan tidak bangun?</string>
    <string name="question_7">7. Apakah Anda pernah benar-benar punya pikiran untuk membunuh diri Anda?</string>
    <string name="question_5_desc">(Jika tidak ada, lewati pertanyaan ini)</string>
    <string name="gejala_kekambuhan_1">Gejala kekambuhan 1</string>
    <string name="gejala_kekambuhan_2">Gejala kekambuhan 2</string>
    <string name="gejala_kekambuhan_3">Gejala kekambuhan 3</string>
    <string name="sudah">Sudah</string>
    <string name="belum">Belum</string>
    <string name="stress">Stress</string>
    <string name="biasa_saja">Biasa saja</string>
    <string name="takut">Takut</string>
    <string name="ada">Ada</string>
    <string name="tidak_ada">Tidak ada</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="simpan">Simpan</string>
    <string name="selfie_result">Foto wajah kamu</string>
    <string name="take_selfie">Ambil Gambar Wajah</string>
    <string name="refresh">Segarkan</string>
    <string name="kesimpulan_placeholder">Kesimpulan:</string>
    <string name="saran_placeholder">Saran:</string>

    <string name="emoji_level_green_kesimpulan">Tidak membutuhkan bantuan</string>
    <string name="emoji_level_yellow_kesimpulan">Sepertinya membutuhkan bantuan</string>
    <string name="emoji_level_red_kesimpulan">Membutuhkan bantuan segera</string>
    <string name="emoji_level_green_saran">Cek kembali secara rutin</string>
    <string name="emoji_level_yellow_saran">Hubungi orang terdekat yang bisa kamu percaya</string>
    <string name="emoji_level_red_saran">Hubungi fasilitas kesehatan di bawah ini</string>
    <string name="read_this_text">Ayo Bercerita</string>
    <string name="text_content">Ceritakan apa yang kamu lakukan hari ini</string>
    <string name="rekam">Rekam Suara</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="password">Kata Sandi</string>
    <string name="have_account"><u>Sudah punya akun?</u></string>
    <string name="dont_have_account"><u>Belum punya akun?</u></string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="start_camera">Start Camera</string>
    <string name="stop_sound">Stop Suara</string>
    <string name="start_sound">Mulai Rekam</string>
    <string name="upload_rekaman">Upload Rekaman</string>
    <string name="putar_rekaman">Putar Rekaman</string>

</resources>