<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.suicidepreventiveapp.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_indicator"
        android:name="com.example.suicidepreventiveapp.ui.fragment.IndicatorFragment"
        android:label="@string/title_indicator"
        tools:layout="@layout/fragment_indicator"/>


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.suicidepreventiveapp.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/questionnaireFragment"
        android:name="com.example.suicidepreventiveapp.ui.fragment.QuestionnaireFragment"
        android:label="QuestionnaireFragment"
        tools:layout="@layout/fragment_questionnaire"/>
    <fragment
        android:id="@+id/questionnaire2Fragment"
        android:name="com.example.suicidepreventiveapp.ui.fragment.Questionnaire2Fragment"
        android:label="Questionnaire2Fragment"
        tools:layout="@layout/fragment_questionnaire2"/>
    <fragment
        android:id="@+id/questionnaire3Fragment"
        android:name="com.example.suicidepreventiveapp.ui.fragment.Questionnaire3Fragment"
        android:label="Questionnaire3Fragment"
        tools:layout="@layout/fragment_questionnaire3"/>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.suicidepreventiveapp.ui.fragment.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.suicidepreventiveapp.ui.fragment.RegisterFragment"
        android:label="RegisterFragment"
        tools:layout="@layout/fragment_register"/>
</navigation>