<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/question_card"
        android:layout_width="379dp"
        android:layout_height="480dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_question_1"
                style="@style/card_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_answer_question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_1">

                <RadioButton
                    android:id="@+id/rb_sudah"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah" />

                <RadioButton
                    android:id="@+id/rb_belum"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/belum" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_question_2"
                style="@style/card_content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_answer_question_1" />

            <RadioGroup
                android:id="@+id/rg_answer_question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_2">

                <RadioButton
                    android:id="@+id/rb_stress"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stress" />

                <RadioButton
                    android:id="@+id/rb_biasa_saja_q2"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/biasa_saja" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_question_3"
                style="@style/card_content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.285"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_answer_question_2" />

            <RadioGroup
                android:id="@+id/rg_answer_question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_3">

                <RadioButton
                    android:id="@+id/rb_takut"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stress" />

                <RadioButton
                    android:id="@+id/rb_biasa_saja_q3"
                    style="@style/card_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biasa_saja" />
            </RadioGroup>

            <Button
                android:id="@+id/button_next"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                android:text="@string/selanjutnya"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.938"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_answer_question_3"
                app:layout_constraintVertical_bias="0.333" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>